AC_INIT([HashJoin],[0.1.0])

AC_CONFIG_SRCDIR([README.mkdn])
AC_CONFIG_AUX_DIR([build-aux])
AM_CONFIG_HEADER([config.h])

AM_INIT_AUTOMAKE([-Wall -Werror foreign])
AM_PROG_AR
# LT_INIT after the project become mature, we can make it a lib
AC_CONFIG_MACRO_DIR([m4])

AC_PROG_CXX

# TODO: use pkgconfig to detect papi

AC_CONFIG_FILES([Makefile])
AC_OUTPUT
